# EmbroideryQuoteCalculator

./: .replit  QB_SETUP.md  QUICKBOOKS_OAUTH_SETUP.md  app.py  app.py.bak  callback.py  database.py  last_part.txt  oauth_server.py  pyproject.toml  quickbooks_app.py  quickbooks_client.py  quickbooks_test.py  replit.nix  run.py
.streamlit/: config.toml
assets/: style.css
attached_assets/: Pasted-2025-04-03-03-26-08-620-embroidery-runner-INFO-Starting-Embroidery-Quoting-Tool-2025-04-03--1743650956933.txt  Pasted-A-more-optimal-approach-is-to-decouple-the-OAuth-callback-handling-from-your-Streamlit-app-This-sep-1743647752441.txt  Pasted-After-reviewing-your-code-and-logs-I-can-see-that-your-QuickBooks-OAuth-integration-is-failing-at-t-1743694017201.txt  Pasted-Below-is-a-detailed-analysis-based-on-your-GitHub-repository-EmbroideryQuoteCalculator-along-with--1743644670055.txt  Pasted-Below-is-an-in-depth-analysis-of-the-potential-issues-we-see-in-your-app-based-on-the-logs-and-comm-1743651900910.txt  Pasted-Below-is-an-overview-of-what-I-found-in-the-repository-along-with-some-recommendations-to-help-preve-1743644394698.txt  Pasted-Error-during-QuickBooks-authentication-HTTP-status-400-error-message-b-error-invalid-grant--1743631276263.txt  Pasted-Here-s-a-final-detailed-recap-of-the-most-likely-causes-of-Invalid-authorization-code-invalid-gra-1743644953386.txt  Pasted-Here-s-a-step-by-step-diagnosis-and-solution-The-Problem-The-logs-consistently-show-Access-token--1743653533056.txt  emb calc.xlsx  embroidery-calculator.py  (+11 more)
